<resources>
    <string name="app_name">My Application 2</string>
    <string name="person_name">Susilo</string>
    <string name="phone_number">089976543897</string>
    <string name="sign_out">sign out</string>
    <string name="person_pict">gambar</string>
    <string name="qr_code">Code QR</string>
    <string name="loginForm">Login Form</string>
    <string name="tUsername">User Name</string>
    <string name="tPassword">Password</string>
    <string name="login">LogIn</string>
    <string name="tlogo">Icon Login</string>
    <string name="Alamat">Alamat</string>
</resources>